2022-10-06  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/pe.pk (PE_File): Fix the location of the sections table.

2022-10-05  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/coff.pk (COFF_Name): Add pretty-printer.
	* pickles/pe.pk (PE_File): Map the symtab by size.
	(PE_Sym): Fix definition.

2022-10-05  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_formater): Support formatting absent
	fields in structs.
	* testsuite/poke.pkl/format-optcond-1.pk: New test.
	* testsuite/poke.pkl/format-optcond-2.pk: Likewise.
	* testsuite/poke.pkl/foramt-optcond-3.pk: Likewise.
	* testsuite/poke.pkl/format-optcond-4.pk: Likewise.
	* testsuite/poke.pkl/format-optcond-5.pk: Likewise.
	* testsuite/poke.pkl/format-optcond-6.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-10-05  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: (struct_type_field_opcond_pre): New rule.
	(struct_type_field_optcond_post): Likewise.
	* libpoke/pkl-ast.h (PKL_AST_STRUCT_TYPE_FIELD_OPTCOND_PRE): New macro.
	(PKL_AST_STRUCT_TYPE_FIELD_OPTCOND_POST): Renamed from OPTCOND.
	(struct pkl_ast_struct_type_field): New field optcond_pre and
	optcond renamed to optcond_post.
	* libpoke/pkl-ast.c (pkl_ast_make_struct_type_field): Handle both
	optcond_pre and optcond_post.
	(pkl_ast_dup_type): Likewise.
	(pkl_ast_sizeof_type): Likewise.
	(pkl_ast_type_is_complete): Likewise.
	(pkl_ast_node_free): Likewise.
	(pkl_ast_print_1): Likewise.
	* libpoke/pkl-anal.c (pkl_anal2_ps_type_struct): Support both
	optcond_pre and optcond_post.
	* libpoke/pkl-pass.c (pkl_do_pass_1): Likewise.
	* libpoke/pkl-promo.c (pkl_promo_ps_struct_type_field): Likewise.
	* libpoke/pkl-typify.c (pkl_typify1_ps_struct): Likewise.
	(pkl_typify1_ps_type_struct): Likewise.
	* libpoke/pvm-val.c (pvm_print_val_1): Do not print offset for
	absent fields in omaps.
	* libpoke/pkl-gen.pks (handle_struct_field_constraints): Likewise.
	(struct_comparator): Likewise.
	(struct_field_mapper): Likewise.