@@ -1,5 +1,11 @@
 2022-10-06  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-gen.c (pkl_gen_pr_op_typeof): Move logic to the
+	typeof RAS macro, and use the macro.
+	* libpoke/pkl-gen.pks (typeof): New macro.
+
+2022-10-06  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* pickles/pe.pk (PE_File): Fix the location of the sections table.
 
 2022-10-05  Jose E. Marchesi  <jemarch@gnu.org>
